-- FINALLY aligned the text labels correctly

--- a/src/css/frequencyViewer.css
+++ b/src/css/frequencyViewer.css
@@ -6,7 +6,7 @@
     font-size: 10px;
     /*width:100%;*/
     /* 20% the size of the trend image */
-    height: 10%;
+    height: 12%;
 }
 
 .frequency-left, .frequency-right {
